# skill-scan

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  RULES.md  action.yml  main.py  pyproject.toml  pyrightconfig.json
.agent/: ARCHITECTURE-REFERENCE.md  WORKFLOW.md  rules-to-build.md
.agent/plans/: fluttering-napping-lemur.md  sharded-cooking-hartmanis.md  stateful-crafting-graham.md
.agent/standards/: CODE-PATTERNS.md  TEST-PATTERNS.md  code-rules.json  test-rules.json
.agent/status/: debt.yaml  improvements.yaml  run-evidence.json
.agents/standards/: CODE-PATTERNS.md  TEST-PATTERNS.md  code-rules.json
.claude/: settings.json
.claude/hooks/: cr-rewrite.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
.repomap/: AGENTS.md  index.json
.repomap.tags.cache.v1/: cache.db
docs/: repo-init-checklist.md
docs/planreviews/: plan-040-assessment-2026-04-02.md  plan-041-assessment-2026-04-02.md
scripts/: __init__.py  _pattern_rules.py  _test_pattern_rules.py  antipattern_context.py  check_ast_antipatterns.py  check_code_patterns.py  check_float_equality.py  check_test_patterns.py  generate_rules_catalog.py  rename_module.py
scripts/arch_smell/: __init__.py  analysis.py  audit.py  constants.py  git.py  infra.py  infra_calls.py  infra_patterns.py  models.py
scripts/ast_checks/: checks.py  models.py  visitor.py
scripts/complexity/: __init__.py  __main__.py  analyzer.py  models.py  radon_checks.py
src/skill_scan/: __init__.py  _ast_detectors.py  _ast_dunder_chain_detector.py  _ast_dynamic_exec_depth3.py  _ast_dynamic_exec_detector.py  _ast_exfil_detector.py  _ast_helpers.py  _ast_imports.py  _ast_inline_chain_detector.py  _ast_join_helpers.py  _ast_kwargs_detector.py  _ast_kwargs_dict_tracker.py  _ast_loop_unroller.py  _ast_ref_tracker.py  _ast_rot13.py  _ast_rot13_branch_analysis.py  _ast_split_bytes.py  _ast_split_call_return.py  _ast_split_chr.py  _ast_split_comprehension.py  _ast_split_detector.py  _ast_split_format.py  _ast_split_format_map.py  _ast_split_helpers.py  _ast_split_int_list_helpers.py  _ast_split_int_list_tracker.py  _ast_split_join_helpers.py  _ast_split_map_helpers.py  _ast_split_map_resolver.py  _ast_split_match.py  _ast_split_method_chains.py  _ast_split_reduce.py  _ast_split_resolve.py  _ast_split_star_helpers.py  (+44 more)
tests/: conftest.py  constants.py
tools/repomap/: pyproject.toml  repomap.cmd  repomap.sh
tools/repomap/src/.repomap.tags.cache.v1/: cache.db
tools/repomap/src/repomap/: __init__.py  cache.py  cli.py  core.py  importance.py  indexer.py  indexer_types.py  io.py  languages.py  models.py  ranking.py  rendering.py  tags.py  tokens.py  tree_context.py
tools/repomap/src/repomap/.repomap.tags.cache.v1/: cache.db
tools/repomap/src/repomap/integrations/: __init__.py  index_hook.py
tools/repomap/src/repomap/queries/tree-sitter-language-pack/: README.md
tools/repomap/src/repomap/queries/tree-sitter-languages/: README.md
(+549 files in other folders)
